--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1683,107 +1683,107 @@ stories:
   domain: http://www.csbj.com/
   link: https://www.csbj.com/2019/12/27/springs-real-estate-market-still-on-fire/
 images:
-- name: castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-- name: old-cabin-oldcabin-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dark-rain.jpg
-- name: power-lines-power-lines-empty-space-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-green-zuma.jpg
-- name: nyc-flag-nycflag-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dali-two.jpg
-- name: aws-s3-riverrapids-riverrapids-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-riverrapids-riverrapids-still.jpg
-- name: dc-statue-dcstatue-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-creativity.jpg
-- name: curtain-curtain-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-nazi-poster.jpg
-- name: store-on-corner-oldcabin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alien-goggles.jpg
-- name: flower-barbed-wire-flower-barbed-wire-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-oily-mcoilface.jpg
-- name: abe-lincoln-one-purple-pond-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-pond-file-00-00-00-00.jpg
-- name: copper-circuit-building-shadows-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-building-shadows-sun.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-- name: status-berlin-status-berlin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gred-mash.jpg
-- name: old-door-lock-old-door-lock-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-constitution.jpg
-- name: gears-4882162452-fa3126b38d-b-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-brush.jpg
-- name: carry-load-carryload-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-gred-mash.jpg
-- name: mosaic-face-mosaic-face-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-pond.jpg
-- name: oldhousecars-house-old-cars-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-blue-circuit.jpg
-- name: oldhousecars-house-old-cars-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-emily-carr.jpg
-- name: docks-docks-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-neo-instinct.jpg
-- name: fence-mexico-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-alberto-giacometti.jpg
-- name: bf-skinner-supreme-court-columns.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-supreme-court-columns.jpg
-- name: stalin-time-working-waterfront-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-waterfront-2.jpg
-- name: downtheline-downtheline-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colored-circuits.jpg
-- name: aws-s3-square-border-traffic-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-border-traffic-square.jpg
-- name: meadowbutterfly-meadow-butterfly-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sunday.jpg
-- name: amusement-park-amusement-park-2-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crabapple.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-- name: old-church-oldchurch-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dali-two.jpg
-- name: fence-fence-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-kand-two.jpg
-- name: downtheline-downtheline-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-yellow-collage.jpg
-- name: oldtrain-oldtrain-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-clean-view.jpg
-- name: white-house-lawn-white-house-lawn-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-pond.jpg
-- name: downtown-los-angeles-downtown-la-copper-circuit-2.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-copper-circuit-2.JPG
-- name: birdhouse-birdhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-yellow-collage.jpg
-- name: nazi-invasion-memorial-to-the-jews-in-berlin-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-memorial-to-the-jews-in-berlin-2.jpg
-- name: store-on-corner-store-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-electricity.jpg
-- name: mistywoods-babyfoot-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crafty-painting.jpg
-- name: machine-road-machine-road-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-ww2-color.jpg
-- name: udnie-DSC_0004.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0004.jpg
-- name: braceros-domingo-ulloa-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-berline-wall-old-building.jpg
-- name: oldcabin-store-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-constitution.jpg
-- name: crow-crow-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-granite.jpg
-- name: carry-load-carryload-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-emily-carr.jpg
-- name: stalin-time-whie-house-close-up-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-whie-house-close-up-2.jpg
-- name: stories-cargo-ship-on-sea-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-diego-rivera1.jpg
-- name: liberty-back-statue-liberty-back-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-neo-instinct.jpg
-- name: oldroad-old-road-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-ww2-color.jpg
-- name: beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
-- name: stories-new-54-32-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-54-32-800-500-0-max-0--5--1.jpg
-- name: oldcabin-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-colorful-dream.jpg
+- name: copper-circuit-shipping-docks_36331347010_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-shipping-docks_36331347010_o.jpg
+- name: ellis-island-ellisisland-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-nazi-poster.jpg
+- name: oldhouse-granaryfield-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-alien-goggles.jpg
+- name: copper-circuit-british-guards-marching.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-british-guards-marching.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
+- name: supreme-court-supremecourt-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-rain.jpg
+- name: amusement-park-amusement-park-2-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-ww2-color.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
+- name: 35201856153_61bc075e4b-rain-princess.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-rain-princess.jpg
+- name: berlinwall2-berlinwall-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-ww2-dresden.jpg
+- name: old-door-lock-old-door-lock-2-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-oily-mcoilface.jpg
+- name: copper-circuit-stainless-tree-sun-ray.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-stainless-tree-sun-ray.jpg
+- name: aws-s3-stories-new-68-113-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-113-800-500-0-max-0--1--1.jpg
+- name: castle-wall-DSC-0067-graham-sutherland.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-graham-sutherland.JPG
+- name: old-granary-field-granaryfield-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-umberto-bocc.jpg
+- name: amusement-park-amusement-park-2-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sand-paper.jpg
+- name: blossombar-blue-brush-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-50-62.jpg
+- name: copper-circuit-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0033.jpg
+- name: scream-DSC_0169.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0169.jpg
+- name: la-muse-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-google-front-of-business.jpg
+- name: gypsy-wagon-gypsywagon-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-constitution.jpg
+- name: bf-skinner-dragon-turning-head.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dragon-turning-head.jpg
+- name: windowmountain-window-mountain-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-post-modern.jpg
+- name: walled-garden-walled-garden-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-nazi-poster.jpg
+- name: nazi-invasion-IMG_6174.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6174.jpg
+- name: nazi-invasion-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-capital-records-building.jpg
+- name: ellis-island-ellis-island-room-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-light-dali.jpg
+- name: white-house-lawn-white-house-window-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-oily-mcoilface.jpg
+- name: birdhouse-birdhouse-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-dali.jpg
+- name: oldsmallboat-oldsmallboat-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-far-away.jpg
+- name: trucksilo-trucksilo-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-asteroids.jpg
+- name: oldcabin-store-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-nazi-poster.jpg
+- name: sand-hand-sand-hand-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-creativity.jpg
+- name: catacombs-catacombs-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-horiz-circuit.jpg
+- name: la-muse-face-eyes-open-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-face-eyes-open-statue.jpg
+- name: oldbarn-oldbarn-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-mucha-mult.jpg
+- name: server-cloud-server-racks-door-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-really-hot.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-internet-numbers.jpg
+- name: hollywood-building-hollywood-building-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-free-woman.jpg
+- name: beach-clouds-lifeguard-beachclouds-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purple-pond.jpg
+- name: mediterranean-mediterranean-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-spagetti-accident.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-electricity.jpg
+- name: school-clouds-church-clouds-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-nazi-poster.jpg
+- name: mosaic-face-mosaic-face-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-colored-circuits.jpg
+- name: white-house-lawn-white-house-lawn-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-emily-carr.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
+- name: school-clouds-church-clouds-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-jap-wav-pr.jpg
+- name: white-house-whitehouse-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-atari-asteroids.jpg
+- name: san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
+- name: birdhouse-birdhouse-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-spagetti-accident.jpg
+- name: nazi-invasion-DSC_0079.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0079.jpg
 ---
 GoFundMe Set Up For Six Lakes Boy; Services Set For Lake Woman.&nbsp;Oklahoma Launches New Online Job Search, Posting System For Teachers.&nbsp;Iowa Hate Crimes Suspect Got Breaks After Earlier Arrests.&nbsp;Target Shooting Is A Favorite Pastime.&nbsp;Shop Dine Play Stay.&nbsp;Church Happenings In The Area.&nbsp;Deputies Looking For Suspect In Carjacking Of Pregnant Woman.&nbsp;Beef Patty Products Recalled.&nbsp;
